<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.main.BusSearchFragment"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">


        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:id="@+id/origin"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/textView3"
                android:layout_marginTop="8dp"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:id="@+id/destination"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView4"/>
        <TextView
                android:text="@string/search_bus_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"/>
        <ImageView
                android:src="@drawable/logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/app_name"
                android:id="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>
        <Button
                android:text="@string/search_buses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/search"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_search"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:drawableEnd="@drawable/ic_search"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/date" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"/>
        <TextView
                android:text="@string/origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3" android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="@+id/origin"
        />
        <TextView
                android:text="@string/destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/origin" android:layout_marginTop="24dp" android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/destination"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/destination"
                android:layout_marginTop="24dp"
                android:text="@string/departure_date"
                app:layout_constraintStart_toStartOf="@+id/date"
                android:textStyle="bold"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/date"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>